@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-19T01:06:57Z",
-  "count_outdated" : 554,
-  "uniques_outdated" : 380,
+  "timestamp" : "2025-07-20T01:15:58Z",
+  "count_outdated" : 555,
+  "uniques_outdated" : 381,
   "count" : 557,
   "uniques" : 383,
   "clones" : [
-    {
-      "timestamp": "2025-07-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-11T00:00:00Z",
       "count": 1,
